some additions